--- a/src/main/resources/editArtistAlbum.fxml
+++ b/src/main/resources/editArtistAlbum.fxml
@@ -4,7 +4,7 @@
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 
-<AnchorPane fx:id="editArtistAlbumPane" prefHeight="800.0" prefWidth="600.0" stylesheets="@style/style.css" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controller.EditArtistOrAlbum">
+<AnchorPane fx:id="editArtistAlbumPane" prefHeight="800.0" prefWidth="600.0" stylesheets="@style/style.css" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.kurosz.Controller.EditArtistOrAlbum">
    <children>
       <ImageView fx:id="image" fitHeight="200.0" fitWidth="200.0" layoutX="200.0" layoutY="37.0" pickOnBounds="true" preserveRatio="true" AnchorPane.bottomAnchor="563.0" AnchorPane.rightAnchor="200.0" AnchorPane.topAnchor="37.0" />
       <Button layoutX="256.0" layoutY="248.0" mnemonicParsing="false" onAction="#edit" text="Edit image" AnchorPane.leftAnchor="256.0" AnchorPane.rightAnchor="256.0" AnchorPane.topAnchor="248.0" />
