--- a/src/main/resources/editSong.fxml
+++ b/src/main/resources/editSong.fxml
@@ -10,7 +10,7 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane fx:id="editSongPane" prefHeight="800.0" prefWidth="600.0" stylesheets="@style/style.css" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controller.editSongController">
+<AnchorPane fx:id="editSongPane" prefHeight="800.0" prefWidth="600.0" stylesheets="@style/style.css" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.kurosz.Controller.editSongController">
    <children>
       <ImageView fx:id="imageSong" fitHeight="200.0" fitWidth="200.0" layoutX="27.0" layoutY="27.0" pickOnBounds="true" preserveRatio="true" AnchorPane.leftAnchor="27.0" AnchorPane.rightAnchor="373.0" AnchorPane.topAnchor="27.0" />
       <JFXTextField fx:id="titleSong" alignment="CENTER" layoutX="243.0" layoutY="27.0" prefHeight="68.0" prefWidth="326.0" promptText="title" AnchorPane.leftAnchor="243.0" AnchorPane.rightAnchor="31.0" AnchorPane.topAnchor="20.0">
