--- a/src/main/resources/player.fxml
+++ b/src/main/resources/player.fxml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import com.jfoenix.controls.JFXListView?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ListView?>
@@ -15,7 +14,9 @@
 <?import javafx.scene.layout.StackPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane fx:id="mainPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="800.0" prefWidth="1280.0" stylesheets="@style/style.css" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.kurosz.Controller.PlayerController">
+<AnchorPane fx:id="mainPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity"
+            prefHeight="800.0" prefWidth="1280.0" stylesheets="@style/style.css" xmlns="http://javafx.com/javafx"
+            xmlns:fx="http://javafx.com/fxml" fx:controller="com.kurosz.Controller.PlayerController">
    <children>
       <AnchorPane fx:id="top" prefHeight="75.0" prefWidth="1280.0">
          <children>
@@ -51,7 +52,15 @@
          </children></AnchorPane>
       <AnchorPane fx:id="musicPane" layoutX="256.0" layoutY="73.0" prefHeight="727.0" prefWidth="1024.0">
          <children>
-            <StackPane prefHeight="600.0" prefWidth="1024.0">
+            <StackPane fx:id="musicStackPane" prefHeight="600.0" prefWidth="1024.0">
+            <children>
+                <AnchorPane fx:id="newPlaylistPane" prefHeight="600.0" prefWidth="1024.0">
+                    <fx:include fx:id="newPlaylist" source="newPlaylist.fxml" />
+                </AnchorPane>
+                <AnchorPane fx:id="songsPane" prefHeight="600.0" prefWidth="1024.0">
+                    <fx:include fx:id="songs" source="songs.fxml" />
+                </AnchorPane>
+            </children>
                <children>
                   <AnchorPane fx:id="createPlaylistPane" prefHeight="600.0" prefWidth="1024.0">
                      <children>
@@ -107,8 +116,6 @@
                               <Font name="System Bold" size="17.0" />
                            </font>
                         </Label>
-                        <JFXListView fx:id="genresListView" layoutX="45.0" layoutY="74.0" orientation="HORIZONTAL" prefHeight="240.0" prefWidth="900.0" />
-                        <JFXListView fx:id="moodsListView" layoutX="45.0" layoutY="316.0" orientation="HORIZONTAL" prefHeight="240.0" prefWidth="900.0" />
                      </children>
                   </AnchorPane>
                </children>
