--- a/src/main/resources/editSong.fxml
+++ b/src/main/resources/editSong.fxml
@@ -11,7 +11,7 @@
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 
-<AnchorPane fx:id="editSongPane" prefHeight="800.0" prefWidth="600.0" stylesheets="@style/style.css" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.kurosz.Controller.EditSongController">
+<AnchorPane fx:id="editSongPane" prefHeight="800.0" prefWidth="600.0" stylesheets="@style/style.css" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.kurosz.controller.EditSongController">
    <children>
       <ImageView fx:id="imageSong" fitHeight="200.0" fitWidth="200.0" layoutX="27.0" layoutY="27.0" pickOnBounds="true" preserveRatio="true" AnchorPane.leftAnchor="27.0" AnchorPane.rightAnchor="373.0" AnchorPane.topAnchor="27.0" />
 <!--      <JFXTextField fx:id="titleSong" alignment="CENTER" layoutX="243.0" layoutY="27.0" prefHeight="68.0" prefWidth="326.0" promptText="title" AnchorPane.leftAnchor="243.0" AnchorPane.rightAnchor="31.0" AnchorPane.topAnchor="20.0">-->
