--- a/src/main/resources/newPlaylist.fxml
+++ b/src/main/resources/newPlaylist.fxml
@@ -6,7 +6,7 @@
 
 <AnchorPane xmlns="http://javafx.com/javafx"
             xmlns:fx="http://javafx.com/fxml"
-            fx:controller="com.kurosz.Controller.NewPlaylistController">
+            fx:controller="com.kurosz.controller.NewPlaylistController">
    <children>
       <Button layoutX="274.0" layoutY="188.0" mnemonicParsing="false" text="Button" />
    </children>
