--- a/src/main/resources/songs.fxml
+++ b/src/main/resources/songs.fxml
@@ -4,7 +4,7 @@
 <?import javafx.scene.layout.AnchorPane?>
 <AnchorPane xmlns="http://javafx.com/javafx"
             xmlns:fx="http://javafx.com/fxml"
-            fx:controller="com.kurosz.Controller.SongsController"
+            fx:controller="com.kurosz.controller.SongsController"
             prefHeight="400.0" prefWidth="600.0">
 
     <children>
