--- a/src/main/resources/newPlaylist.fxml
+++ b/src/main/resources/newPlaylist.fxml
@@ -5,8 +5,7 @@
 
 
 <AnchorPane xmlns="http://javafx.com/javafx"
-            xmlns:fx="http://javafx.com/fxml"
-            fx:controller="com.kurosz.controller.NewPlaylistController">
+            xmlns:fx="http://javafx.com/fxml">
    <children>
       <Button layoutX="274.0" layoutY="188.0" mnemonicParsing="false" text="Button" />
    </children>
