--- a/src/main/resources/songs.fxml
+++ b/src/main/resources/songs.fxml
@@ -1,23 +1,25 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.*?>
+<?import javafx.geometry.Insets?>
+<?import javafx.scene.control.TableColumn?>
+<?import javafx.scene.control.TableView?>
 <?import javafx.scene.layout.AnchorPane?>
-<AnchorPane xmlns="http://javafx.com/javafx"
-            xmlns:fx="http://javafx.com/fxml"
-            fx:controller="com.kurosz.controller.SongsController"
-            prefHeight="400.0" prefWidth="600.0">
+
+<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1">
 
     <children>
-        <TableView fx:id="songsTable" layoutX="17.0" layoutY="28.0" prefHeight="551.0" prefWidth="962.0"
-                   stylesheets="@style/style.css">
+        <TableView fx:id="songsTable" layoutX="17.0" layoutY="28.0" prefHeight="551.0" prefWidth="962.0" stylesheets="@style/style.css" AnchorPane.rightAnchor="20.0">
             <columns>
-                <TableColumn fx:id="title" minWidth="50.0" prefWidth="250.0" text="title"/>
-                <TableColumn fx:id="artist" minWidth="50.0" prefWidth="200.0" text="artist"/>
-                <TableColumn fx:id="album" minWidth="50.0" prefWidth="200.0" text="album"/>
-                <TableColumn fx:id="rate" maxWidth="100.0" minWidth="50.0" text="rate"/>
-                <TableColumn fx:id="year" maxWidth="100.0" minWidth="50.0" text="year"/>
-                <TableColumn fx:id="track" maxWidth="200.0" minWidth="50.0" prefWidth="150.0" text="track"/>
+                <TableColumn fx:id="title" minWidth="250.0" prefWidth="350.0" text="title" />
+                <TableColumn fx:id="artist" minWidth="50.0" prefWidth="200.0" text="artist" />
+                <TableColumn fx:id="album" minWidth="50.0" prefWidth="200.0" text="album" />
+                <TableColumn fx:id="rate" maxWidth="100.0" minWidth="50.0" text="rate" />
+                <TableColumn fx:id="year" maxWidth="100.0" minWidth="50.0" text="year" />
+                <TableColumn fx:id="track" maxWidth="200.0" minWidth="50.0" prefWidth="150.0" text="track" />
             </columns>
+         <padding>
+            <Insets left="20.0" right="20.0" />
+         </padding>
         </TableView>
     </children>
 </AnchorPane>
